...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zyl-PO-A61">
                                <rect key="frame" x="122" y="353" width="130" height="30"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="130" id="7ec-Ux-rD3"/>
                                </constraints>
                                <state key="normal" title="Cadastrar">
                                    <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="cadastrarAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yET-3v-ra8"/>
                                </connections>
                            </button>
...
                                                <constraint firstItem="Ix5-AR-DK8" firstAttribute="leading" secondItem="Bqf-ct-2ev" secondAttribute="leading" id="UnC-uF-7Dh"/>
                                            </constraints>
                                        </stackView>
                                        <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ndp-h2-En9" userLabel="Nome Stack View">
                                            <rect key="frame" x="23" y="38.5" width="296" height="20.5"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nome:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aqN-yL-9jC">
                                                    <rect key="frame" x="0.0" y="0.0" width="60" height="20.5"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="60" id="N9T-C9-Xk9"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
...
                                                <constraint firstItem="aqN-yL-9jC" firstAttribute="leading" secondItem="Ndp-h2-En9" secondAttribute="leading" id="kjc-Ci-gDs"/>
                                            </constraints>
                                        </stackView>
                                        <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VzN-qg-4GP" userLabel="Cor Stack View">
                                            <rect key="frame" x="23" y="69" width="296" height="20.5"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cor:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TCw-sR-Ufx">
                                                    <rect key="frame" x="0.0" y="0.0" width="45" height="20.5"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="45" id="fJh-BO-x2h"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
...
