...
        super.didReceiveMemoryWarning()
    }
    
    // MARK: - Funções do JsonLoader
    func insertDogConcluido() {
        let alert = UIAlertController(title: "", message: "Cadastro realizado com sucesso!", preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "ok", style: .default, handler: { action in
            self.performSegue(withIdentifier: "cadastrarHomeSegue", sender: nil)
        }))
        
        self.present(alert, animated: true, completion:nil)
          }
    
...
