//
//  TelaCadastroUITests.swift
//  DogCRUDUITests
//
//  Created by Ítalo Sjobom Nápoles on 29/10/17.
//  Copyright © 2017 BEPiD. All rights reserved.
//

import XCTest

class TelaCadastroUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testExample() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }
    
    /**
     Método de teste para cadastro de um Dog
     - Author: Ítalo Sjobom Nápoles
     */
    func testCadastro(){
        
        let app = XCUIApplication()
        app.buttons["Cadastrar"].tap()
        
        let tablesQuery2 = app.tables
        let tablesQuery = tablesQuery2
        tablesQuery/*@START_MENU_TOKEN@*/.textFields["Nome"]/*[[".cells.textFields[\"Nome\"]",".textFields[\"Nome\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        tablesQuery2.children(matching: .cell).element(boundBy: 1).children(matching: .textField).element.typeText("Teste Interface")
        
        let corTextField = tablesQuery/*@START_MENU_TOKEN@*/.textFields["Cor"]/*[[".cells.textFields[\"Cor\"]",".textFields[\"Cor\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/
        corTextField.tap()
        corTextField.tap()
        tablesQuery2.children(matching: .cell).element(boundBy: 2).children(matching: .textField).element.typeText("Teste Intereface")
        app.navigationBars["Cadastrar"].buttons["Save"].tap()
        app.alerts.buttons["ok"].tap()
        
    }
    
}
